--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -24,3 +24,7 @@ h1.profile_name a:link, h1.profile_name a:visited {
 	text-decoration: none;
 	border: none;
 }
+
+.profile p {
+	margin : 0;
+}
